[package]
name = "client"
version = "0.1.0"
authors = ["Matthew Evans <mcaei@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["full"] }
futures = "0.3.0"
bytes = "0.5"